# CryptoGoblin

./: CMakeLists.txt  README.md  TUNING.txt  autoAdjust.hpp  autoAdjustHwloc.hpp  build.sh  cli-miner.cpp  colors.hpp  common.h  config.txt  console.cpp  console.h  donate-level.h  executor.cpp  executor.h  httpd.cpp  httpd.h  hwlocMemory.hpp  jconf.cpp  jconf.h  jext.h  jpsock.cpp  jpsock.h  minethd.cpp  minethd.h  msgstruct.h  socket.cpp  socket.h  socks.h  thdq.hpp  version.h  webdesign.cpp
crypto/: c_groestl.c  c_groestl.h  c_jh.c  c_keccak.c  c_keccak.cpp  c_skein.c  c_skein.h  cryptonight.h  cryptonight_aesni.h  cryptonight_aesni_p.hpp  cryptonight_common.cpp  cryptonight_common_p.hpp  cryptonight_main_p.hpp  cryptonight_softaes_p.hpp  int-util.h  jh.cpp  jh.hpp  keccak.cpp  soft_aes.c  soft_aes.cpp  soft_aes_p.hpp
doc/: FAQ.md  compile.md  compile_FreeBSD.md  compile_Linux.md  compile_Windows.md  compile_macOS.md  tuning-cpu.md  tuning-gpu.md  usage.md
rapidjson/: prettywriter.h  rapidjson.h  reader.h
xmrstak/: config.tpl  donate-level.hpp  jconf.cpp  jconf.hpp  params.hpp  pools.tpl  version.cpp  version.hpp
xmrstak/backend/: backendConnector.cpp  backendConnector.hpp  cryptonight.hpp  globalStates.cpp  globalStates.hpp  iBackend.hpp  miner_work.hpp  plugin.hpp  pool_data.hpp
xmrstak/backend/amd/: OclCryptonightR_gen.cpp  OclCryptonightR_gen.hpp  autoAdjust.hpp  config.tpl  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
xmrstak/backend/amd/amd_gpu/: gpu.cpp  gpu.hpp
xmrstak/backend/amd/amd_gpu/opencl/: cryptonight.cl  fast_int_math_v2.cl  groestl256.cl  wolf-aes.cl
xmrstak/backend/cpu/: autoAdjust.hpp  autoAdjustHwloc.hpp  common.h  config.tpl  cpuType.cpp  cpuType.hpp  hwlocMemory.cpp  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
xmrstak/backend/cpu/crypto/: CryptonightR_gen.cpp  c_groestl.h  c_skein.c  cn_gpu.hpp  cn_gpu_avx.cpp  cn_gpu_ssse3.cpp  cryptonight.hpp  cryptonight_aesni_p.hpp  cryptonight_common.cpp  cryptonight_common_p.hpp  cryptonight_gpu_p.hpp  cryptonight_main_p.hpp  cryptonight_softaes_p.hpp  extrahashes_p.hpp  groestl.cpp  groestl.hpp  groestl_tables.hpp  hash.h  keccak.cpp  keccak.hpp  skein_port.h  soft_aes.hpp  soft_aes_p.hpp  variant4_random_math.h
xmrstak/backend/cpu/crypto/asm/: cryptonight_v8_main_loop.S
xmrstak/backend/cpu/crypto/asm/cnR/: CryptonightR_soft_aes_template.inc  CryptonightR_template.S  CryptonightR_template.asm  CryptonightR_template.h  CryptonightR_template.inc
xmrstak/backend/nvidia/: CudaCryptonightR_gen.cpp  CudaCryptonightR_gen.hpp  autoAdjust.hpp  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
xmrstak/backend/nvidia/nvcc_code/: cryptonight.hpp  cuda_aes.hpp  cuda_blake.hpp  cuda_core.cu  cuda_cryptonight_gpu.hpp  cuda_device.hpp  cuda_extra.cu  cuda_extra.hpp  cuda_fast_div_heavy.hpp  cuda_fast_int_math_v2.hpp  cuda_groestl.hpp  cuda_jh.hpp  cuda_keccak.hpp  cuda_skein.hpp
xmrstak/cli/: cli-miner.cpp  colors.hpp
xmrstak/cpputil/: read_write_lock.h
xmrstak/http/: httpd.cpp  httpd.hpp  webdesign.cpp
xmrstak/misc/: coinDescription.hpp  configEditor.hpp  console.cpp  console.hpp  environment.hpp  executor.cpp  executor.hpp  home_dir.hpp  jext.hpp  telemetry.cpp  telemetry.hpp  thdq.hpp  uac.cpp  utility.cpp  utility.hpp
xmrstak/net/: jpsock.cpp  jpsock.hpp  msgstruct.hpp  socket.cpp  socket.hpp  socks.hpp
